syntax = "proto3";

package db.v1;

option go_package = "internal/db/api/v1";

service Controller {
  rpc Put(PutRequest) returns (PutResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc RegisterNode(RegisterNodeRequest) returns (RegisterNodeResponse) {}
  rpc UnregisterNode(UnregisterNodeRequest) returns (UnregisterNodeResponse) {}
}

service Node {
  rpc Put(PutRequest) returns (PutResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Healthz(HealthzRequest) returns (HealthzResponse) {}
}

message PutRequest {
  string key = 1;
  bytes value = 2;
  int64 version = 3;
}

message PutResponse {}

message GetRequest {
  string key = 1;
}

message GetResponse {
  bytes value = 1;
  int64 version = 2;
}

message RegisterNodeRequest {
  string id = 1;
  string address = 2;
}

message RegisterNodeResponse {}

message UnregisterNodeRequest {
  string id = 1;
}

message UnregisterNodeResponse {}

message HealthzRequest {}

message HealthzResponse {
  enum Code {
    HEALTHZ_UNKNOWN = 0;
    HEALTHZ_OK = 1;
    HEALTHZ_ERROR = 2;
  }

  Code code = 1;
  string id = 2;
}
